--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gridView1"
-    android:numColumns="auto_fit"
-    android:gravity="center"
-    android:columnWidth="100dp"
-    android:stretchMode="columnWidth"
+<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/flipper"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-</GridView>
+    android:layout_height="fill_parent">
+    
+    <LinearLayout
+        android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+        android:orientation="vertical">
+	    <GridView
+	        android:id="@+id/gridView1"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:columnWidth="100dp"
+	        android:gravity="center"
+	        android:numColumns="auto_fit"
+	        android:stretchMode="columnWidth" 
+	        android:background="#ffffff">
+	    </GridView>
+	</LinearLayout>
+	
+    <LinearLayout
+        android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+        android:orientation="vertical">
+	    <GridView
+	        android:id="@+id/gridView2"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:columnWidth="100dp"
+	        android:gravity="center"
+	        android:numColumns="auto_fit"
+	        android:stretchMode="columnWidth" 
+	        android:background="#ffffff">
+	    </GridView>
+	</LinearLayout>
+</ViewFlipper>
