--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
 	        android:gravity="center"
 	        android:numColumns="auto_fit"
 	        android:stretchMode="columnWidth" 
-	        android:background="#ffffff">
+	        android:background="#000000">
 	    </GridView>
 	</LinearLayout>
 </ViewFlipper>
