--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
 	        android:gravity="center"
 	        android:numColumns="auto_fit"
 	        android:stretchMode="columnWidth" 
-	        android:background="#ffffff">
+	        android:background="#002859">
 	    </GridView>
 	</LinearLayout>
 	
