--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -9,7 +9,7 @@
         android:layout_width="50px"
         android:layout_height="50px"
         android:layout_marginRight="10px"
-        android:src="@drawable/android_logo" >
+        android:src="@drawable/cow" >
     </ImageView>
  
     <TextView
